From Express to Http-server

--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
   <title>Playing with Service Workers</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
 </head>
 <body>
-  <img src="/pikachu.png" alt="">
+  <div class="pokemon" title="Pikachu" color="yellow">
+    <img id="pikachu" src="/pikachu.png" alt="">
+    <button id="break-link">Break Link</button>
+  </div>
+  <div class="pokemon" title="Raichu" color="orange">
+    <img src="/raichu.png" alt="">
+  </div>
+  <div class="pokemon" title="Bulbasur" color="blue">
+    <img src="/bulbasur.png" alt="">
+  </div>
   Playing with ServiceWorkers
+  <script src="main.js"></script>
 </body>
 </html>
